force-app/main/default/objects/Zip_Code_to_QID__c/Zip_Code_to_QID__c.object-meta.xml
<CustomObject>
    <label>Zip Code to QID</label>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code to QID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>