force-app/main/default/objects/Zip_Code_to_QID__c/fields/CDC_QID__c.field-meta.xml
<CustomField>
    <fullName>CDC_QID__c</fullName>
    <label>CDC_QID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>