force-app/main/default/objects/Zip_Code_to_QID__c/fields/GROTH_QID__c.field-meta.xml
<CustomField>
    <fullName>GROTH_QID__c</fullName>
    <label>GROTH_QID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>