force-app/main/default/objects/Zip_Code_to_QID__c/fields/REP__c.field-meta.xml
<CustomField>
    <fullName>REP__c</fullName>
    <label>REP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>