force-app/main/default/objects/Zip_Code_to_QID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDC_QID__c</columns>
    <columns>GROTH_QID__c</columns>
    <columns>REP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>75034</value>
    </filters>
    <label>All Records</label>
</ListView>